# hwid-spoofer-utility

./: CMakeLists.txt  README.md
hwid-spoofer-utility/: requirements.txt
hwid-spoofer-utility/src/: __init__.py  backup.py  spoofer.py
hwid-spoofer-utility/tests/: test_spoofer.py
include/: hwid_reader.h  registry_utils.h  spoofer.h
src/: hwid_reader.cpp  main.cpp  registry_utils.cpp  spoofer.cpp
tests/: test_spoofer.cpp
